k8s/base/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: livemart
  labels:
    app.kubernetes.io/part-of: livemart
